--- a/.gitignore
+++ b/.gitignore
@@ -3,14 +3,13 @@ target/
 .idea
 *.iml
 
+world.tar.xz
+
 banned-ips.json
 banned-players.json
 ops.json
 help.yml
 server.properties
-sportpaper.yml
-sportpaper.jar
-update
 usercache.json
 whitelist.json
 logs/
@@ -19,7 +18,6 @@ world/
 world_nether/
 world_the_end/
 wepif.yml
-crash-reports/
 eula.txt
 
 bukkit.yml
@@ -27,5 +25,4 @@ commands.yml
 permissions.yml
 spigot-1.8.8.jar
 spigot.yml
-
 
