start to use mongodb

--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,11 @@
             <artifactId>acf-paper</artifactId>
             <version>0.5.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongodb-driver-sync</artifactId>
+            <version>4.9.0</version>
+        </dependency>
     </dependencies>
 
     <build>
