--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,11 @@
             <artifactId>mongodb-driver-sync</artifactId>
             <version>4.9.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.javafaker</groupId>
+            <artifactId>javafaker</artifactId>
+            <version>0.12</version>
+        </dependency>
     </dependencies>
 
     <build>
