--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,4 +2,4 @@ name: HippoPractice
 version: ${project.version}
 main: practice.hippo.HippoPractice
 api-version: 1.8
-depend: [WorldEdit]
+depend: [WorldEdit, HolographicDisplays]
